Images researched and selected, menu CSS created for desktop and mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <nav>
                 <div class="left-side">
-                    <div id="logo">Dreamday Events</div>
+                    <div id="logo"><h2>Dreamday Events</h2></div>
                 </div>
                 <div class="right-side">
                     <ul>
